# render_pydantic_relations

./: README.md  example.py  pyproject.toml
src/render_pydantic_relations/: __init__.py  core.py
tests/: format_type.py
