[project]
name = "render_pydantic_relations"
version = "0.1.0"
description = "Visualize Pydantic model relationships with Graphviz."
authors = [
    { name = "Felix Hammer", email = "fhammer@uos.de" }
]
dependencies = [
    "pydantic>=1.9",
    "graphviz"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
